--- a/app/src/main/res/layout/login_usuario.xml
+++ b/app/src/main/res/layout/login_usuario.xml
@@ -79,12 +79,14 @@
         android:layout_below="@id/main_element2"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="56dp"
+        android:layout_marginBottom="14dp"
         android:background="@drawable/btn_user_style"
         android:elevation="5dp"
         android:text="@string/acceder"
         android:textAllCaps="false"
         android:textColor="@color/txt_pressed_user_style"
         android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/adview1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_element2" />
@@ -111,11 +113,13 @@
         android:id="@+id/adview1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="14dp"
         android:layout_marginBottom="116dp"
         app:adSize="BANNER"
-        app:adUnitId="ca-app-pub-8133052963274724~8703737904"
+        app:adUnitId="ca-app-pub-8133052963274724/9139372669"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.812"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_btnAcceder" />
 </androidx.constraintlayout.widget.ConstraintLayout>
