constraintLayout de tutorial actualizado

--- a/app/src/main/res/layout/intro_1_opciones.xml
+++ b/app/src/main/res/layout/intro_1_opciones.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="55dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="72dp"
         android:layout_marginEnd="55dp"
         android:contentDescription="@string/app_name"
         android:src="@drawable/edsalogo"
@@ -39,18 +40,16 @@
         android:layout_height="wrap_content"
         android:layout_above="@id/intro_goto_registro"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="249dp"
+        android:layout_marginTop="64dp"
         android:background="@drawable/btn_goto_style"
         android:elevation="5dp"
         android:text="@string/tomar_el_tutorial"
         android:textAllCaps="false"
         android:textColor="@color/txt_pressed_user_style"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/intro_imgedsa"
-        app:layout_constraintVertical_bias="0.213" />
+        app:layout_constraintTop_toBottomOf="@+id/intro_imgedsa" />
 
     <Button
         android:id="@+id/intro_goto_registro"
