--- a/app/src/main/res/layout/intro_3_funcion_a.xml
+++ b/app/src/main/res/layout/intro_3_funcion_a.xml
@@ -68,7 +68,7 @@
 
     <ImageView
         android:id="@+id/funciona_img2"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="130dp"
         android:layout_below="@id/funciona_txt3"
         android:layout_centerHorizontal="true"
@@ -81,36 +81,32 @@
 
     <Button
         android:id="@+id/funciona_previous"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="60dp"
-        android:layout_marginTop="170dp"
-        android:layout_marginBottom="212dp"
+        android:layout_marginBottom="60dp"
         android:background="@drawable/btn_previous_style"
         android:elevation="5dp"
         android:text="@string/retroceder"
         android:textAllCaps="false"
         android:textColor="@color/txt_pressed_user_style"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/funciona_img2" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/funciona_next"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="170dp"
         android:layout_marginEnd="60dp"
-        android:layout_marginBottom="212dp"
+        android:layout_marginBottom="60dp"
         android:background="@drawable/btn_next_style"
         android:elevation="5dp"
         android:text="@string/avanzar"
         android:textAllCaps="false"
         android:textColor="@color/txt_pressed_user_style"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/funciona_img2" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
