--- a/app/src/main/res/layout/intro_5_funcion_c.xml
+++ b/app/src/main/res/layout/intro_5_funcion_c.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -63,35 +64,31 @@
 
     <Button
         android:id="@+id/funcionc_previous"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="60dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="69dp"
+        android:layout_marginBottom="60dp"
         android:background="@drawable/btn_previous_style"
         android:elevation="5dp"
         android:text="@string/retroceder"
         android:textAllCaps="false"
         android:textColor="@color/txt_pressed_user_style"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/funcionc_img2" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/funcionc_next"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="50dp"
         android:layout_marginEnd="60dp"
-        android:layout_marginBottom="69dp"
+        android:layout_marginBottom="60dp"
         android:background="@drawable/btn_next_style"
         android:elevation="5dp"
         android:text="@string/avanzar"
         android:textAllCaps="false"
         android:textColor="@color/txt_pressed_user_style"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/funcionc_img2" />
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
