--- a/app/src/main/res/layout/intro_9_goto_main.xml
+++ b/app/src/main/res/layout/intro_9_goto_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -52,36 +53,32 @@
 
     <Button
         android:id="@+id/goto_previous"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="60dp"
-        android:layout_marginTop="101dp"
-        android:layout_marginBottom="152dp"
+        android:layout_marginBottom="60dp"
         android:background="@drawable/btn_previous_style"
         android:elevation="5dp"
         android:text="@string/retroceder"
         android:textAllCaps="false"
         android:textColor="@color/txt_pressed_user_style"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/goto_img1" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/goto_next"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="101dp"
         android:layout_marginEnd="60dp"
-        android:layout_marginBottom="152dp"
+        android:layout_marginBottom="60dp"
         android:background="@drawable/btn_next_style"
         android:elevation="5dp"
         android:text="@string/registrarme"
         android:textAllCaps="false"
         android:textColor="@color/txt_pressed_user_style"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/goto_img1" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
