--- a/app/src/main/res/layout/activity_ads.xml
+++ b/app/src/main/res/layout/activity_ads.xml
@@ -48,4 +48,20 @@
         app:adSize="BANNER"
         app:adUnitId="ca-app-pub-8133052963274724/9359219732" />
 
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adview7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:adSize="BANNER"
+        app:adUnitId="ca-app-pub-8133052963274724/8622658452" />
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adview8"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:adSize="BANNER"
+        app:adUnitId="ca-app-pub-8133052963274724/2114279792" />
+
 </LinearLayout>
