--- a/app/src/main/res/layout/login_usuario.xml
+++ b/app/src/main/res/layout/login_usuario.xml
@@ -62,6 +62,7 @@
             android:hint="@string/contrase_a"
             android:inputType="textPassword"
             android:singleLine="true"
+            android:imeOptions="actionDone"
             android:textColor="@color/kolaloka"
             android:textSize="20sp" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -98,16 +99,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.996"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/adview1" />
+        app:layout_constraintTop_toBottomOf="@+id/main_btnAcceder" />
 
-    <com.google.android.gms.ads.AdView
+    <!-- com.google.android.gms.ads.interstitial.InterstitialAd
         android:id="@+id/adview1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        app:adSize="BANNER"
-        app:adUnitId="ca-app-pub-8133052963274724/9139372669"
+        app:adSize="FLUID"
+        app:adUnitId="ca-app-pub-3940256099942544/1033173712"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_btnAcceder" />
+        app:layout_constraintTop_toBottomOf="@+id/main_btnAcceder" / -->
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <!-- app:adUnitId="ca-app-pub-8133052963274724~8703737904" -->
