--- a/app/src/main/res/layout/fragment_update_user.xml
+++ b/app/src/main/res/layout/fragment_update_user.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="12dp">
 
     <TextView
         android:id="@+id/tvUpdate"
@@ -35,7 +36,6 @@
             android:hint="@string/user_name_hint"
             android:inputType="textVisiblePassword"
             android:singleLine="true"
-            android:textColor="@color/blanco"
             android:textColorHint="@color/negro"
             android:textSize="20sp" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -44,7 +44,6 @@
         android:id="@+id/tilUpdateUser2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tilUpdateUser1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tilUpdateUser1"
@@ -58,7 +57,6 @@
             android:layout_gravity="center"
             android:inputType="textPassword"
             android:singleLine="true"
-            android:textColor="@color/blanco"
             android:textColorHint="@color/negro"
             android:textSize="20sp"
             android:hint="@string/password_hint"/>
@@ -68,10 +66,31 @@
         android:id="@+id/tilUpdateUser3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tilUpdateUser2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tilUpdateUser2"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@color/rosa">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etUpdateNewPassword"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:inputType="textPassword"
+            android:singleLine="true"
+            android:textColorHint="@color/negro"
+            android:textSize="20sp"
+            android:hint="@string/new_password"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tilUpdateUser4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tilUpdateUser3"
         app:passwordToggleEnabled="true"
         app:passwordToggleTint="@color/rosa">
 
@@ -82,7 +101,6 @@
             android:layout_gravity="center"
             android:inputType="textPassword"
             android:singleLine="true"
-            android:textColor="@color/blanco"
             android:textColorHint="@color/negro"
             android:textSize="20sp"
             android:hint="@string/keyword_hint"/>
@@ -92,12 +110,13 @@
         android:id="@+id/btnUpdateUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tilUpdateUser3"
+        android:layout_below="@id/tilUpdateUser4"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
         android:text="@string/update"
         android:textAllCaps="false"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tilUpdateUser3" />
+        app:layout_constraintTop_toBottomOf="@+id/tilUpdateUser4" />
 </androidx.constraintlayout.widget.ConstraintLayout>
